# ProxyDesignPatternCPP

./: CMakeLists.txt  README.md  main.cpp  run.sh
proxy/: CachedItem.cpp  CachedItem.h  HTTPRequester.cpp  HTTPRequester.h  HTTPRequesterProxy.cpp  HTTPRequesterProxy.h  HttpRequest.h
